--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,18 @@
 }
 
 body {
-    height: 1000px;
+    height: 100%;
+    width: 100%
 /*     background-color: #40d1a6; */
     font-size: 18px;
     font-family: 'Quantico', sans-serif ;
-    background : url("https://images.saymedia-content.com/.image/t_share/MTkzOTUzODU0MDkyODc5MzY1/particlesjs-examples.gif") no-repeat;
-    background-position : center;
-    background-size : cover;
+    background: url("https://images.saymedia-content.com/.image/t_share/MTkzOTUzODU0MDkyODc5MzY1/particlesjs-examples.gif");
+    background-repeat: repeat-y;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    
+    
 }
 /* HEADER */
 #header-nav {
