--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,8 @@ body {
     border: 2px solid grey;
     border-radius: 0;
     padding: 0;
+    background: url("https://cdn.shopify.com/s/files/1/0425/2699/8690/files/1_480x480.gif?v=1652817024") repeat-y);
+    
 }
 
 .jumbotron h3 {
