--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 /*     background-color: #40d1a6; */
     font-size: 18px;
     font-family: 'Quantico', sans-serif ;
-    background: url("https://images.saymedia-content.com/.image/t_share/MTkzOTUzODU0MDkyODc5MzY1/particlesjs-examples.gif");
+    background: url("https://images.saymedia-content.com/.image/t_share/MTkzOTUzODU0MDkyODc5MzY1/particlesjs-examples.gif") ;
     background-repeat: repeat-y;
     background-attachment: fixed;
     background-position: center;
@@ -88,7 +88,7 @@ body {
     border: 2px solid grey;
     border-radius: 0;
     padding: 0;
-    background: url("https://cdn.shopify.com/s/files/1/0425/2699/8690/files/1_480x480.gif?v=1652817024");
+    background: url("https://cdn.shopify.com/s/files/1/0425/2699/8690/files/1_480x480.gif?v=1652817024") no-repeat center center;
     background-size: cover;
 }
 
