--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ body {
     border: 2px solid grey;
     border-radius: 0;
     padding: 0;
-    background: url("https://cdn.shopify.com/s/files/1/0425/2699/8690/files/1_480x480.gif?v=1652817024") no-repeat center center;
+    background:url("https://png.pngtree.com/thumb_back/fh260/back_our/20190621/ourmid/pngtree-japanese-sushi-gourmet-texture-background-image_188187.jpg") no-repeat center center;
     background-size: cover;
 }
 
